# Sr3qts-AoC-2024

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
dec01/: dec1.cpp  dec1.hpp  dec1.py
dec02/: decx.py
dec03/: decx.hpp
dec04/: decx.hpp
dec05/: decx.hpp
dec06/: decx.hpp
dec07/: decx.hpp
dec08/: decx.hpp
dec09/: decx.hpp
dec10/: decx.hpp
dec11/: decx.hpp
dec12/: decx.hpp
dec14/: decx.cpp  decx.hpp
template/: decx.hpp  decx.py
utils/: utils  utils.cpp  utils.h
